@@ -1,8 +1,6 @@
 # Solaris on sparc
 # Dual processor
 #MAKEJOBFLAGS = -j 2
-TARGETOS = sparc-sun-solaris
-HOSTOS = sparc-sun-solaris
 
 # local includes and libraries
 TARGETCXXFLAGS = "-O2 -I$(HOME)/local-$(HOSTNAME)/include"
