@@ -1,3 +1,9 @@
+2012-03-09 Borut Razem <borut.razem AT gmail.com>
+
+	* local/dev.mk, local/solaris-x86.mk: added TARGETCPPFLAGS;
+	  removed explicit definitions of TARGETOS and HOSTOS: they are
+	  now guessed by configure script
+
 2012-03-01 Borut Razem <borut.razem AT gmail.com>
 
 	* components/sdcc.mk: removed comment "test-gbz80 temporary disabled"
